added player damage tracking (might not work, not tested)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: TrackerPlugin
 version: '${project.version}'
 main: me.perpltxed.trackerplugin.TrackerPlugin
-api-version: 1.19
-softdepend: [SiegeWar]
+api-version: 1.20
+softdepend:
